# xpilot

./: .env.example  .gitignore  README.md  cli.py  config.py  logger.py  main.py  pyproject.toml
commands/: research.py  test.py
tools/: llm.py
xpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
